fix for sidebars on small screens

--- a/components/sidebar.less
+++ b/components/sidebar.less
@@ -12,9 +12,10 @@
 .sidebar-container .row {
 	height:0;
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
 	.sidebar-wrapper {
 		position:static;
+		height:auto;
 	}
 	.sidebar-container,
 	.sidebar-container .row {
